# agentkern

./: .gitignore  .npmrc  .pre-commit-config.yaml  ALTERNATIVE_UNICORN_IDEAS.md  API_OPPORTUNITY_ANALYSIS_2026.md  ARCHITECTURE.md  CODEBASE_AUDIT_REPORT.md  COMPETITIVE_LANDSCAPE.md  COMPREHENSIVE_AUDIT_REPORT.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENGINEERING_STANDARD.md  FIXES_APPLIED.md  GLOBAL_GAPS.md  LICENSING.md  LICENSING_STRATEGY.md  MANDATE.md  MANIFESTO.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_READY_APPROACH.md  README.md  SECURITY_TOOLING_SETUP.md  STRATEGY.md  deny.toml  docker-compose.yml  index.html  index.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sonar-project.properties  turbo.json  use.md  use_.md
.cargo/: audit.toml
.github/: dependabot.yml  zap-rules.tsv
.github/workflows/: ai-review.yml  ci.yml  deploy-gh-pages.yml  deploy-playground.yml  deploy-preview.yml  deploy-services.yml  release.yml  security.yml
.well-known/: security.txt
adr/: 003-production-ready-security-fixes.md  ADR-001-gateway-identity-merge.md  ADR-004-hybrid-language-strategy.md
apps/gateway/: openapi.yaml  package.json  tsconfig.tsbuildinfo
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/controllers/: arbiter.controller.ts  gate.controller.ts  health.controller.ts  identity.controller.ts  nexus-stream.controller.ts  nexus.controller.ts  synapse.controller.ts
apps/gateway/src/dto/: arbiter.dto.ts  gate.dto.ts  identity.dto.ts  nexus.dto.ts  synapse.dto.ts
apps/gateway/src/modules/: arbiter.module.ts  gate.module.ts  identity.module.ts  nexus.module.ts  (+1 more)
apps/gateway/test/: e2e.spec.ts
apps/identity/: .env.example  .env.staging  .env.staging.example  .gitignore  .semgrep.yml  Dockerfile  README-TESTING.md  README.md  REMEDIATION_GUIDE.md  audit-results.json  build_errors.txt  dependency-list.json  docker-compose.staging.yml  docker-compose.yml  eslint_full_report.txt  eslint_report.txt  package-lock.json  package.json  use-to-audit.md
apps/identity/docs/: DEPLOYMENT.md  INTEGRATION.md  INTENT_DNS_SPEC.md  PROTOCOL_SPEC.md  SDK.md  TRUST_MESH_SPEC.md
apps/identity/k8s/: deployment.yaml
apps/identity/scripts/: build-bridge.js  verify-bridge.js
apps/identity/sdk/python/: pyproject.toml
apps/identity/sdk/python/agentproof/: __init__.py
apps/identity/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  benchmarks.spec.ts  data-source.ts  instrumentation.ts  main.ts
apps/identity/test/: app.e2e-spec.ts  dashboard.e2e-spec.ts  dns.e2e-spec.ts  mesh.e2e-spec.ts  penetration.e2e-spec.ts  performance-test.k6.js  pillars.e2e-spec.ts  proof.e2e-spec.ts  security-comprehensive.e2e-spec.ts  test-database.helper.ts  test-types.ts
apps/playground/: index.html  package.json  vercel.json
apps/playground/src/: App.css  App.tsx  index.css
crates/arbiter/: Cargo.toml
crates/arbiter/src/: antifragile.rs  chaos.rs  locks.rs  queue.rs
crates/gate/: Cargo.toml
crates/gate/benches/: policy_bench.rs
crates/gate/src/: lib.rs  observability.rs  policy.rs  sovereign.rs
crates/nexus/src/: lib.rs
crates/synapse/src/: crdt.rs  types.rs
crates/treasury/src/: transfer.rs
docs/: DECISION_RECORD_BRIDGE.md  DEPLOYMENT.md  EPISTEMIC_HEALTH.md  NAMING_CONVENTIONS.md  PRE_LAUNCH_AUDIT_REQUIREMENTS.md  PRE_LAUNCH_AUDIT_RESULTS.md  PRODUCTION_READY_BRIDGE_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT.md  TESTING_GUIDE.md  VULNERABILITY_REMEDIATION_GUIDE.md  architecture.md  getting-started.md  index.md
docs/.github/: dependabot.yml
docs/.github/workflows/: ai-review.yml  dast.yml  dependabot-auto-merge.yml  deploy-playground.yml  deploy-preview.yml  deploy-services.yml
docs/adr/: ADR-001-gateway-identity-merge.md  ADR-002-monorepo-structure.md
docs/api/: sdk.md
docs/examples/: multi-agent.md
docs/guides/: policies.md  quickstart.md
docs/identity/: DEPLOYMENT.md  INTEGRATION.md  PROTOCOL_SPEC.md  SDK.md  TRUST_MESH_SPEC.md
docs/runbooks/: certificate-rotation-runbook.md  kill-switch-runbook.md  treasury-reconciliation-runbook.md
docs/wiki/: ARBITER_DESIGN.md  GATE_DESIGN.md  GOVERNANCE_DESIGN.md  IDENTITY_DESIGN.md  INFRASTRUCTURE_DESIGN.md  NEXUS_DESIGN.md  README.md  SYNAPSE_DESIGN.md  TREASURY_DESIGN.md
ee/: LICENSE-ENTERPRISE.md  README.md
ee/audit-export/: Cargo.toml
ee/audit-export/src/: lib.rs
ee/billing/: Cargo.toml
ee/billing/src/: lib.rs
ee/cloud/: Cargo.toml
ee/cloud/src/: lib.rs
ee/cockpit/: Cargo.toml  README.md
ee/cockpit/src/: lib.rs
ee/connectors/: license.rs
ee/core/: connection.rs  mod.rs
ee/energy/: demo.rs  mod.rs
ee/escalation/: pagerduty.rs  teams.rs
ee/identity/: mod.rs
ee/idp/: bridge.rs  demo.rs  mod.rs  trust.rs
ee/models/: demo.rs  mod.rs
ee/multitenancy/: Cargo.toml
ee/multitenancy/src/: lib.rs
ee/productivity/: demo.rs  mod.rs  outlook.rs  sharepoint.rs
ee/retail/: demo.rs  mod.rs
ee/sovereign-mesh/: Cargo.toml
ee/sovereign-mesh/src/: lib.rs
ee/sso/: Cargo.toml  README.md
ee/sso/src/: lib.rs
ee/treasury/: Cargo.toml
ee/treasury/src/: lib.rs
ee/trust/: Cargo.toml
ee/trust/src/: lib.rs
examples/cloud/: README.md
examples/cloud/azure/: README.md  ai-foundry-extension.json  arm-template.json  marketplace-listing.md
guides/: policies.md  quickstart.md
identity/: INTENT_DNS_SPEC.md
observability/: docker-compose.otel.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
playground/: index.html
playground/assets/: index-BFKisruP.js  index-DbtTfKf_.css
runbooks/: kill-switch-runbook.md
sdks/create-agentkern/templates/policy-module/: Cargo.toml  README.md
sdks/create-agentkern/templates/policy-module/src/: lib.rs
sdks/sdk-gen/: README.md  package.json
sdks/typescript/sdk/: package.json
tests/: integration.rs  integration.test.ts
tests/performance/: gate-load-test.js  security-load-test.js
wasm-policies/prompt-guard/: Cargo.toml
wasm-policies/prompt-guard/src/: lib.rs
wiki/: GATE_DESIGN.md  INFRASTRUCTURE_DESIGN.md  INTEGRATION_GUIDE.md  NEXUS_DESIGN.md  TREASURY_DESIGN.md
(+150 files in other folders)
