[workspace]
resolver = "2"

members = [
    # ===========================================================================
    # CORE PILLARS (6 Pillars of AgentKern)
    # Note: Identity is in apps/identity (TypeScript)
    # ===========================================================================
    # 🛡️ Gate - Policy & Safety ("Is this action allowed?")
    "packages/gate",
    # 🧠 Synapse - Memory & State ("What was the goal? Has agent drifted?")
    "packages/synapse",
    # ⚖️ Arbiter - Coordination & Control ("Two agents want same resource—who wins?")
    "packages/arbiter",
    # 🔀 Nexus - Protocols & Routing ("How do multi-vendor agents talk?")
    "packages/nexus",
    # 💰 Treasury - Payments & Budgets ("How do agents pay? What's the limit?")
    "packages/treasury",
    # 🪪 Identity - apps/identity (TypeScript)
    
    # ===========================================================================
    # INFRASTRUCTURE
    # ===========================================================================
    "packages/runtime",         # WASM Execution runtime
    "packages/edge",            # Edge deployment
    "packages/native-binding",  # Native bindings
    "packages/parsers",         # Message parsers (IDOC, SWIFT, HL7)
    
    # ===========================================================================
    # DOMAIN (DDD Bounded Contexts)
    # ===========================================================================
    "packages/governance",      # Compliance & Regulations
    
    # ===========================================================================
    # ENTERPRISE EDITION (Commercial)
    # ===========================================================================
    "ee/audit-export",
    "ee/billing",
    "ee/cloud",
    "ee/cockpit",
    "ee/multitenancy",
    "ee/sovereign-mesh",
    "ee/sso",
    "ee/treasury",
    "ee/trust",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/AgentKern/agentkern"
authors = ["AgentKern Team"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.83"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.95"

# Crypto
sha2 = "0.10.8"
hmac = "0.12.1"
ring = "0.17.8"

# HTTP
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
axum = "0.8.8"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "sqlite"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

# Time
chrono = { version = "0.4.39", features = ["serde"] }

# Decimal
rust_decimal = { version = "1.39", features = ["serde"] }
rust_decimal_macros = "1.39"

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# WASM
wasmtime = "40.0"

# Random
rand = "0.9"

# Neural
ort = "2.0.0-rc.10"
ndarray = "0.16"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
