[package]
name = "agentkern-billing"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: Usage-Based Billing & Metering"
repository = "https://github.com/agentkern/agentkern"

[dependencies]
# Core (Dec 2025 - verified)
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0"
tracing = "0.1.41"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.83"

# HTTP client for Stripe API (Dec 2025 - verified)
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }

