[package]
name = "agentkern-cloud"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: Multi-Cell Mesh Coordination"
repository = "https://github.com/agentkern/agentkern"
documentation = "https://docs.agentkern.com/enterprise/cloud"

[dependencies]
# Core (Dec 2025 - verified)
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0"
tracing = "0.1.41"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

# ============================================================
# LICENSE SERVER VALIDATION (Dec 2025)
# ============================================================

# HTTP client for license server validation
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }

# JWT for license token validation (offline)
# - HMAC-SHA256 signed license tokens
# - Offline validation with public key
jsonwebtoken = "9.3"

# HMAC for license key derivation
hmac = "0.12"
sha2 = "0.10.8"

[dev-dependencies]
tokio-test = "0.4"
