[package]
name = "agentkern-multitenancy"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: Multi-Tenancy"
repository = "https://github.com/agentkern/agentkern"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
