[package]
name = "agentkern-sovereign-mesh"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: Sovereign Mesh Multi-Region Geo-Fencing"
repository = "https://github.com/agentkern/agentkern"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
