[package]
name = "agentkern-sso"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: SSO Integration (SAML/OIDC)"
repository = "https://github.com/agentkern/agentkern"

[features]
default = []
# Full SAML with xmlsec (requires system libs: libxml2, xmlsec1)
saml-full = ["samael/xmlsec"]

[dependencies]
# Core (Dec 2025 - verified)
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0"
tracing = "0.1.41"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.83"

# HTTP client for OIDC token exchange (Dec 2025 - verified)
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }

# ============================================================
# REAL SSO IMPLEMENTATION (Dec 2025)
# ============================================================

# SAML 2.0 support (samael 0.0.19 - May 2025)
# - Serialize/deserialize SAML messages
# - IdP and SP-initiated SSO
# - Assertion validation
samael = "0.0.19"

# JWT validation for OIDC (jsonwebtoken 9.3 - Dec 2025)
# - Encode/decode JWTs
# - RS256, HS256, ES256 algorithms
# - Claims validation (exp, iss, aud)
jsonwebtoken = "9.3"

# Base64/URL encoding for SAML
base64 = "0.22"
urlencoding = "2.1"
