[package]
name = "agentkern-treasury-ee"

version = "0.1.0"
edition = "2024"
license = "LicenseRef-AgentKern-Enterprise"
description = "AgentKern Enterprise: Cross-Agent Payment Rails"
repository = "https://github.com/agentkern/agentkern"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
