[package]
name = "prompt-guard-wasm"
version = "1.0.0"
edition = "2021"
description = "Hot-swappable WASM policy module for prompt injection detection"

# Standalone package (not part of parent workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Minimal deps for WASM
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unicode normalization for adversarial defense
unicode-normalization = "0.1"
deunicode = "1.6"

[profile.release]
lto = true
opt-level = "z"
strip = true
