[package]
name = "{{PROJECT_NAME_SNAKE}}"
version = "0.1.0"
edition = "2021"
description = "WASM Policy Module for AgentKern Gate"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true
